# learn_SDL2

./: .gitignore  CMakeLists.txt  README.md  hello_SDL2.cpp
3rd/SDL_mixer-release-2.6.3/: CMakeLists.txt
